<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_20"
    android:paddingEnd="@dimen/padding_20"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/btn_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/join"
        android:textSize="@dimen/font_16"
        android:textColor="@color/colorTxtGrey1"
        android:fontFamily="@font/notosans_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_70"
        android:text="@string/login"
        android:textSize="@dimen/font_24"
        android:textColor="@color/colorTxtBlack1"
        android:fontFamily="@font/notosans_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/id"
        android:textSize="@dimen/font_13"
        android:textColor="@color/colorTxtGrey2"
        android:fontFamily="@font/notosans_regular"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_20"
        android:textColor="@color/colorTxtInput"
        android:fontFamily="@font/notosans_regular"
        android:hint="@string/input_id"
        android:textColorHint="@color/colorTxtHint"
        android:theme="@style/EditTextTheme"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/txt_id"
        app:layout_constraintLeft_toLeftOf="parent"
        />










    <TextView
        android:id="@+id/txt_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/password"
        android:textSize="@dimen/font_13"
        android:textColor="@color/colorTxtGrey2"
        android:fontFamily="@font/notosans_regular"
        app:layout_constraintTop_toBottomOf="@+id/edt_id"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edt_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_20"
        android:textColor="@color/colorTxtInput"
        android:fontFamily="@font/notosans_regular"
        android:hint="@string/input_password"
        android:textColorHint="@color/colorTxtHint"
        android:theme="@style/EditTextTheme"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/txt_pw"
        app:layout_constraintLeft_toLeftOf="parent"
        />











    <LinearLayout
        android:id="@+id/layout_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/edt_pw"
        app:layout_constraintRight_toRightOf="parent"
        >
        <ImageView
            android:id="@+id/img_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_error_outline_black_24dp"
            />
        <TextView
            android:id="@+id/btn_find_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_4"
            android:text="@string/find_id"
            android:textSize="@dimen/font_13"
            android:textColor="@color/colorTxtGrey2"
            android:fontFamily="@font/notosans_regular"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_4"
            android:text="|"
            android:textSize="@dimen/font_13"
            android:textColor="@color/colorTxtGrey2"
            android:fontFamily="@font/notosans_regular"
            />
        <TextView
            android:id="@+id/btn_find_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_4"
            android:text="@string/find_pw"
            android:textSize="@dimen/font_13"
            android:textColor="@color/colorTxtGrey2"
            android:fontFamily="@font/notosans_regular"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_no_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_68"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/layout_find"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:id="@+id/btn_without_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_login"
            android:textSize="@dimen/font_17"
            android:textColor="@color/colorTxtGrey1"
            android:fontFamily="@font/notosans_regular"
            android:visibility="invisible"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_21"
        android:layout_marginStart="@dimen/margin_76"
        android:layout_marginEnd="@dimen/margin_76"
        android:text="@string/login"
        android:textSize="@dimen/font_17"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/notosans_medium"
        android:background="@drawable/layout_green_long_button"
        app:layout_constraintTop_toBottomOf="@+id/layout_no_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />












</androidx.constraintlayout.widget.ConstraintLayout>