<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectLoginOrJoinActivity">


    <ImageView
        android:id="@+id/imageView_company_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/logo_mint"
        app:srcCompat="@drawable/company_logo_mint" />

    <ImageView
        android:id="@+id/imageView_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_company_logo"
        android:contentDescription="@string/logo_name"
        app:srcCompat="@drawable/everex_name_navy" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="@dimen/width_190"
        android:layout_height="@dimen/height_52"
        android:layout_marginTop="@dimen/margin_178"

        android:background="@drawable/radius_mint_button"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_company_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_join"
        android:layout_width="@dimen/width_190"
        android:layout_height="@dimen/height_52"
        android:layout_marginTop="@dimen/margin_40"

        android:background="@drawable/radius_mint_outline_button"
        android:text="@string/join"
        android:textColor="@color/colorIntro"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />
<!-- 뒤에 그림자 삭제 -->
<!--    android:stateListAnimator="@null"-->


</androidx.constraintlayout.widget.ConstraintLayout>