<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_50"
    tools:context=".JoinActivity">

    <TextView
        android:id="@+id/textView_hellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/Hello"
        android:textAppearance="@style/Hello"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_65"
        android:gravity="top"
        android:text="@string/name"
        android:textAppearance="@style/TextStyleToJoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_hellow" />



    <!--        아이디 [이메일] 입력-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FilledBox_editText_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_50"

        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorIntro"
        app:placeholderText="@string/input_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name"
        app:startIconDrawable="@drawable/codicon_account"
        app:startIconTint="@color/colorIntro">

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:gravity="top"
        android:text="@string/email"
        android:textAppearance="@style/TextStyleToJoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FilledBox_editText_name" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FilledBox_editText_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_50"

        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorIntro"
        app:placeholderText="@string/input_email"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_email"
        app:startIconDrawable="@drawable/mail_mint"
        app:startIconTint="@color/colorIntro">

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textEmailAddress"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:gravity="top"
        android:text="@string/password_subject"
        android:textAppearance="@style/TextStyleToJoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FilledBox_editText_email" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FilledBox_editText_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_50"

        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorIntro"
        app:placeholderText="@string/input_password"

        app:endIconMode="password_toggle"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password"
        app:startIconDrawable="@drawable/lock_mint"
        app:startIconTint="@color/colorIntro">

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPassword"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_uppercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FilledBox_editText_password">

        <ImageView
            android:id="@+id/imageView_circle_uppercase"
            android:layout_width="@dimen/margin_10"
            android:layout_height="@dimen/margin_10"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle_red_24dp" />

        <TextView
            android:id="@+id/textView_upper"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/password_uppercase"
            android:textAppearance="@style/CheckJoinTermsTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_10char_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_uppercase">

        <ImageView
            android:id="@+id/imageView_circle_10char_more"
            android:layout_width="@dimen/margin_10"
            android:layout_height="@dimen/margin_10"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle_red_24dp" />

        <TextView
            android:id="@+id/textView_10char_more"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/password_term_10cher_more"
            android:textAppearance="@style/CheckJoinTermsTextStyle" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout_special_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_10char_more">

        <ImageView
            android:id="@+id/imageView_special_characters"
            android:layout_width="@dimen/margin_10"
            android:layout_height="@dimen/margin_10"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle_red_24dp" />

        <TextView
            android:id="@+id/textView_special_characters"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/password_term_SpecialCharacters"
            android:textAppearance="@style/CheckJoinTermsTextStyle" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:layout_width="@dimen/width_190"
        android:layout_height="@dimen/height_52"
        android:layout_marginRight="@dimen/margin_50"

        android:background="@drawable/radius_mint_button"
        android:stateListAnimator="@null"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>